# s3-duckdb-apple-upload-test

./: main.py  prep3.xml  pyproject.toml  text.json
app/: client.py  main.py  processor.py  schema.py  upload.py
app/ducky/: config.py  duckdb_client.py  duckdb_importer.py  xml_exporter.py
