[project]
name = "seler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.48",
    "celery[redis]>=5.5.3",
    "duckdb>=1.4.1",
    "fastapi[standard]>=0.118.2",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "ruff>=0.14.0",
]
